@@ -216,7 +216,13 @@ extern const char *outputdriver;
  * also used in XeTeXFontMgr_FC.cpp and XeTeX_ext.c.  */
 #include <ft2build.h>
 #include FT_FREETYPE_H
+#ifdef __cplusplus
+extern "C" {
+#endif
 extern FT_Library gFreeTypeLibrary;
+#ifdef __cplusplus
+}
+#endif
 
 #include <stdio.h> /* for FILE */
 
